--- a/index.html
+++ b/index.html
@@ -322,45 +322,53 @@
     }
 
     .schedule-card__header {
-  padding-inline: 1rem;      /* match the grid wrapper */
-  box-sizing: border-box;
-}
-@media (max-width: 560px) {
-  .schedule-card__header {
-    padding-inline: 0.75rem;
-
+      position: relative;
+      padding-inline: 1rem;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .schedule-card__meta {
-      font-size: 0.75rem;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      color: rgba(148, 163, 184, 0.7);
-      font-weight: 600;
+    @media (max-width: 560px) {
+      .schedule-card__header {
+        padding-inline: 0.75rem;
+      }
     }
 
     .schedule-card__title {
       margin: 0;
       font-size: 1.35rem;
       letter-spacing: -0.01em;
+      color: #7bd88f;
+      text-align: center;
     }
 
-    .schedule-card__today {
-      background: rgba(125, 216, 143, 0.18);
-      border: 1px solid rgba(125, 216, 143, 0.4);
-      color: #bbf7d0;
-      padding: 0.45rem 0.95rem;
-      border-radius: 999px;
-      font-size: 0.85rem;
-      font-weight: 600;
+    .schedule-card__calendar-button {
+      position: absolute;
+      top: 50%;
+      right: 0.5rem;
+      transform: translateY(-50%);
+      display: inline-grid;
+      place-items: center;
+      width: 2.4rem;
+      height: 2.4rem;
+      border-radius: 50%;
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      background: rgba(15, 23, 42, 0.82);
+      color: rgba(226, 232, 240, 0.95);
+      font-size: 1.2rem;
       cursor: pointer;
-      transition: background 160ms ease, border-color 160ms ease, transform 160ms ease;
+      transition: border-color 150ms ease, background 150ms ease, color 150ms ease,
+        transform 150ms ease;
     }
 
-    .schedule-card__today:hover {
-      background: rgba(125, 216, 143, 0.28);
-      border-color: rgba(125, 216, 143, 0.6);
-      transform: translateY(-1px);
+    .schedule-card__calendar-button:hover,
+    .schedule-card__calendar-button:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(21, 32, 44, 0.9);
+      color: #f8fafc;
+      outline: none;
     }
 
     .schedule-card__grid-wrapper {
@@ -369,7 +377,7 @@
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
+      grid-template-columns: repeat(var(--weekly-grid-columns, 5), minmax(0, 1fr));
       grid-template-rows: repeat(2, minmax(104px, 1fr));
       width: 100%;
       border-radius: 18px;
@@ -380,10 +388,10 @@
     }
 
     .weekly-grid__cell {
-      display: grid;
-      grid-template-rows: auto auto auto 1fr;
-      align-content: start;
-      gap: 0.35rem;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      gap: 0.65rem;
       padding: 0.9rem 0.7rem 0.75rem;
       background: rgba(15, 21, 30, 0.92);
       color: inherit;
@@ -426,25 +434,56 @@
       box-shadow: inset 0 0 0 2px rgba(45, 212, 195, 0.4);
     }
 
-    .weekly-grid__session {
-      font-size: 0.68rem;
-      letter-spacing: 0.2em;
+    .weekly-grid__header {
+      font-size: 0.85rem;
+      font-weight: 700;
+      letter-spacing: 0.12em;
       text-transform: uppercase;
-      color: rgba(203, 213, 225, 0.68);
+      color: rgba(203, 213, 225, 0.9);
+      align-self: flex-start;
     }
 
-    .weekly-grid__clinic {
+    .weekly-grid__clinic-wrapper {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .weekly-grid__clinic-select {
+      appearance: none;
+      background: rgba(23, 32, 44, 0.88);
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      border-radius: 12px;
+      color: rgba(226, 232, 240, 0.96);
       font-size: 0.9rem;
       font-weight: 600;
       letter-spacing: 0.01em;
-      color: rgba(226, 232, 240, 0.94);
+      padding: 0.6rem 2.25rem 0.6rem 0.9rem;
+      text-align: center;
+      text-align-last: center;
       text-transform: uppercase;
+      min-width: 220px;
+      max-width: 100%;
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, color 160ms ease;
+      margin-inline: auto;
+    }
+
+    .weekly-grid__clinic-select:hover,
+    .weekly-grid__clinic-select:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(31, 45, 62, 0.95);
+      outline: none;
     }
 
     .weekly-grid__time {
       font-size: 0.75rem;
       color: rgba(148, 163, 184, 0.8);
       letter-spacing: 0.05em;
+      text-align: center;
+      margin-top: auto;
     }
 
     .weekly-grid__indicator {
@@ -452,10 +491,24 @@
       font-size: 1rem;
       opacity: 0;
       transition: opacity 160ms ease;
+      align-self: center;
     }
 
     .weekly-grid__indicator--visible {
       opacity: 1;
+    }
+
+    .weekly-grid--single-day {
+      --weekly-grid-columns: 1;
+      grid-template-rows: repeat(2, minmax(120px, 1fr));
+    }
+
+    .weekly-grid--single-day .weekly-grid__cell {
+      border-right: none;
+    }
+
+    .weekly-grid--single-day .weekly-grid__cell:first-child {
+      border-bottom: 1px solid rgba(148, 163, 184, 0.18);
     }
 
     @media (max-width: 600px) {
@@ -464,13 +517,128 @@
         padding: 0.75rem 0.6rem 0.65rem;
       }
 
-      .weekly-grid__clinic {
+      .weekly-grid__clinic-select {
         font-size: 0.85rem;
+        min-width: 0;
+        width: 100%;
       }
 
       .weekly-grid__time {
         font-size: 0.7rem;
       }
+    }
+
+    .week-overlay {
+      position: fixed;
+      inset: 0;
+      display: grid;
+      place-items: center;
+      padding: 1.5rem;
+      background: rgba(4, 7, 12, 0.72);
+      backdrop-filter: blur(18px);
+      z-index: 2100;
+    }
+
+    .week-overlay[hidden] {
+      display: none;
+    }
+
+    .week-overlay__dialog {
+      position: relative;
+      width: min(900px, 94vw);
+      border-radius: 22px;
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      background: rgba(9, 14, 22, 0.94);
+      box-shadow: 0 30px 70px rgba(2, 8, 23, 0.65);
+      padding: 1.5rem;
+      display: grid;
+      gap: 1.2rem;
+    }
+
+    .week-overlay__close {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      background: rgba(15, 23, 42, 0.82);
+      color: var(--text-secondary);
+      border-radius: 999px;
+      width: 2.2rem;
+      height: 2.2rem;
+      display: grid;
+      place-items: center;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background 160ms ease, border-color 160ms ease, transform 160ms ease;
+    }
+
+    .week-overlay__close:hover,
+    .week-overlay__close:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(21, 32, 44, 0.92);
+      outline: none;
+    }
+
+    .week-overlay__title {
+      margin: 0;
+      font-size: 1.25rem;
+      font-weight: 600;
+      letter-spacing: -0.01em;
+      color: #e2e8f0;
+      text-align: center;
+    }
+
+    .week-overlay__grid-wrapper {
+      width: 100%;
+    }
+
+    .week-overlay__grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-auto-rows: minmax(120px, 1fr);
+      gap: 0.75rem;
+    }
+
+    .week-overlay__cell {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      padding: 1rem;
+      border-radius: 18px;
+      border: 1px solid rgba(148, 163, 184, 0.28);
+      background: rgba(15, 21, 30, 0.92);
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, transform 160ms ease;
+    }
+
+    .week-overlay__cell:hover,
+    .week-overlay__cell:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(23, 33, 46, 0.95);
+      outline: none;
+    }
+
+    .week-overlay__day {
+      font-size: 0.78rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: rgba(203, 213, 225, 0.82);
+    }
+
+    .week-overlay__slot {
+      font-size: 0.85rem;
+      font-weight: 600;
+      color: rgba(226, 232, 240, 0.96);
+    }
+
+    .week-overlay__time {
+      font-size: 0.75rem;
+      color: rgba(148, 163, 184, 0.8);
+    }
+
+    .week-overlay__cell[aria-current="true"] {
+      border-color: rgba(45, 212, 195, 0.6);
+      box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.35);
     }
 
     .day-overlay {
@@ -602,8 +770,40 @@
       opacity: 1;
     }
 
-    .day-overlay__confirm {
+    .day-overlay__actions {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      justify-content: flex-end;
       margin-top: 0.5rem;
+    }
+
+    .day-overlay__add-patient {
+      padding: 0.65rem 1rem;
+      border-radius: 12px;
+      font-weight: 600;
+      font-size: 0.9rem;
+      background: rgba(15, 23, 42, 0.85);
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      color: rgba(226, 232, 240, 0.92);
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, transform 160ms ease;
+    }
+
+    .day-overlay__add-patient:hover,
+    .day-overlay__add-patient:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(23, 34, 48, 0.9);
+      outline: none;
+      transform: translateY(-1px);
+    }
+
+    .day-overlay__add-patient:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .day-overlay__confirm {
       padding: 0.75rem 1rem;
       border-radius: 12px;
       font-weight: 600;
@@ -7829,12 +8029,15 @@ body.all-tasks-overlay-active {
   </section>
         <section class="card schedule-card" id="weeklyScheduleCard" aria-label="Weekly clinic schedule">
           <div class="schedule-card__header">
-            <div>
-              <span class="schedule-card__meta">Clinic map</span>
-              <h2 class="schedule-card__title">Daily Schedule</h2>
-            </div>
-            <button class="schedule-card__today" type="button" data-schedule-today>
-              Jump to today
+            <h2 class="schedule-card__title">Care I will Provide Today</h2>
+            <button
+              type="button"
+              class="schedule-card__calendar-button"
+              data-week-overlay-open
+              aria-label="Open weekly clinic schedule"
+              aria-haspopup="dialog"
+            >
+              📆
             </button>
           </div>
           <div class="schedule-card__grid-wrapper">
@@ -7843,7 +8046,7 @@ body.all-tasks-overlay-active {
               id="weeklyScheduleGrid"
               data-weekly-grid
               role="grid"
-              aria-label="Weekday clinic schedule"
+              aria-label="Clinic schedule for selected day"
             ></div>
           </div>
           <div
@@ -7868,9 +8071,43 @@ body.all-tasks-overlay-active {
                 <p class="day-overlay__subtitle" data-day-overlay-subtitle></p>
               </header>
               <div class="day-overlay__slots" data-day-overlay-slots></div>
-              <button type="button" class="day-overlay__confirm" data-day-overlay-confirm>
-                Confirm Patients
+              <div class="day-overlay__actions">
+                <button type="button" class="day-overlay__add-patient" data-day-overlay-add-patient>
+                  + Add patient
+                </button>
+                <button type="button" class="day-overlay__confirm" data-day-overlay-confirm>
+                  Confirm Patients
+                </button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="week-overlay"
+            data-week-overlay
+            role="dialog"
+            aria-modal="true"
+            aria-labelledby="weekOverlayTitle"
+            tabindex="-1"
+            hidden
+          >
+            <div class="week-overlay__dialog" role="document">
+              <button
+                type="button"
+                class="week-overlay__close"
+                data-week-overlay-close
+                aria-label="Close weekly schedule"
+              >
+                &times;
               </button>
+              <h3 id="weekOverlayTitle" class="week-overlay__title">Weekly Clinic Schedule</h3>
+              <div class="week-overlay__grid-wrapper">
+                <div
+                  class="week-overlay__grid"
+                  data-week-overlay-grid
+                  role="grid"
+                  aria-label="Weekly clinic schedule overview"
+                ></div>
+              </div>
             </div>
           </div>
         </section>
