--- a/index.html
+++ b/index.html
@@ -4295,6 +4295,106 @@
       padding-right: 0.35rem;
     }
 
+    .resources-drawer__form {
+      margin: 0 0.25rem 1.75rem;
+      padding: 1rem 1.1rem 1.25rem;
+      display: grid;
+      gap: 0.85rem;
+      background: rgba(14, 21, 30, 0.72);
+      border: 1px solid rgba(148, 163, 184, 0.18);
+      border-radius: 14px;
+    }
+
+    .resources-drawer__form legend {
+      font-size: 0.85rem;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: rgba(226, 232, 240, 0.78);
+      padding: 0;
+      margin: 0 0 0.25rem;
+    }
+
+    .resources-drawer__form fieldset {
+      border: none;
+      margin: 0;
+      padding: 0;
+      display: grid;
+      gap: 0.75rem;
+    }
+
+    .resources-drawer__form label {
+      display: flex;
+      flex-direction: column;
+      gap: 0.35rem;
+      font-size: 0.8rem;
+      color: rgba(203, 213, 225, 0.82);
+    }
+
+    .resources-drawer__form input,
+    .resources-drawer__form textarea,
+    .resources-drawer__form select {
+      background: rgba(17, 25, 36, 0.88);
+      border: 1px solid rgba(100, 116, 139, 0.35);
+      border-radius: 10px;
+      padding: 0.5rem 0.75rem;
+      color: rgba(226, 232, 240, 0.96);
+      font-size: 0.85rem;
+      width: 100%;
+    }
+
+    .resources-drawer__form textarea {
+      resize: vertical;
+      min-height: 64px;
+    }
+
+    .resources-drawer__form select {
+      text-transform: capitalize;
+    }
+
+    .resources-drawer__form-actions {
+      display: flex;
+      justify-content: flex-end;
+      gap: 0.75rem;
+      margin-top: 0.5rem;
+    }
+
+    .resources-drawer__form button[type="submit"] {
+      background: var(--hero-teal);
+      border: none;
+      color: #022624;
+      font-weight: 600;
+      padding: 0.55rem 1.2rem;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: background 150ms ease, color 150ms ease, transform 120ms ease;
+    }
+
+    .resources-drawer__form button[type="submit"]:hover,
+    .resources-drawer__form button[type="submit"]:focus-visible {
+      background: #27c2b0;
+      color: #011c1a;
+      outline: none;
+    }
+
+    .resources-drawer__form button[type="submit"]:active {
+      transform: translateY(1px);
+    }
+
+    .resources-drawer__form-message {
+      font-size: 0.78rem;
+      color: rgba(148, 163, 184, 0.9);
+      min-height: 1.1rem;
+    }
+
+    .resources-drawer__form-message[data-status="error"] {
+      color: #fca5a5;
+    }
+
+    .resources-drawer__form-message[data-status="success"] {
+      color: #4ade80;
+    }
+
     .command-link--drawer {
       letter-spacing: 0.05em;
     }
@@ -8562,6 +8662,36 @@ body.all-tasks-overlay-active {
       <button id="resourcesClose" class="resources-drawer__close" type="button" aria-label="Close resources">✕</button>
     </header>
     <div class="resources-drawer__body" data-resources-list></div>
+    <form id="addResourceForm" class="resources-drawer__form" autocomplete="off">
+      <fieldset>
+        <legend>Add a quick link</legend>
+        <label for="resourceTitle">Resource title
+          <input id="resourceTitle" name="resourceTitle" type="text" required placeholder="Example: Clinic Handbook" />
+        </label>
+        <label for="resourceUrl">Link URL
+          <input id="resourceUrl" name="resourceUrl" type="url" required placeholder="https://" inputmode="url" />
+        </label>
+        <label for="resourceLabel">Badge label (optional)
+          <input id="resourceLabel" name="resourceLabel" type="text" maxlength="32" placeholder="e.g., workflow" />
+        </label>
+        <label for="resourceDescription">Description (optional)
+          <textarea id="resourceDescription" name="resourceDescription" rows="2" placeholder="What will this link help with?" maxlength="160"></textarea>
+        </label>
+        <label for="resourceTheme">Accent color
+          <select id="resourceTheme" name="resourceTheme">
+            <option value="custom" selected>Custom</option>
+            <option value="planning">Planning</option>
+            <option value="strategies">Strategies</option>
+            <option value="digest">Digest</option>
+            <option value="vault">Vault</option>
+          </select>
+        </label>
+      </fieldset>
+      <p class="resources-drawer__form-message" data-resource-form-message aria-live="polite"></p>
+      <div class="resources-drawer__form-actions">
+        <button type="submit">Add link</button>
+      </div>
+    </form>
   </aside>
 
   <div
@@ -9042,7 +9172,61 @@ body.all-tasks-overlay-active {
       theme: "vault"
     }
   ];
-  let routineState = {};
+  const CUSTOM_RESOURCE_STORAGE_KEY = "ui.resources.customLinks.v1";
+  const RESOURCE_THEME_OPTIONS = new Set(["planning", "strategies", "digest", "vault"]);
+
+  function normalizeResourceTheme(theme) {
+    if (!theme) return "custom";
+    const normalized = String(theme).trim().toLowerCase();
+    return RESOURCE_THEME_OPTIONS.has(normalized) ? normalized : "custom";
+  }
+
+  function sanitizeResourceText(value) {
+    return typeof value === "string" ? value.trim() : "";
+  }
+
+  function loadCustomResources() {
+    try {
+      const stored = localStorage.getItem(CUSTOM_RESOURCE_STORAGE_KEY);
+      if (!stored) {
+        return [];
+      }
+      const parsed = JSON.parse(stored);
+      if (!Array.isArray(parsed)) {
+        return [];
+      }
+      return parsed
+        .filter(item => item && typeof item.href === "string" && typeof item.title === "string")
+        .map(item => ({
+          id: item.id || `custom-${Math.random().toString(36).slice(2, 10)}`,
+          href: item.href,
+          title: sanitizeResourceText(item.title) || item.href,
+          label: sanitizeResourceText(item.label) || undefined,
+          description: sanitizeResourceText(item.description) || undefined,
+          theme: normalizeResourceTheme(item.theme),
+          ariaLabel: sanitizeResourceText(item.ariaLabel) || undefined,
+          isCustom: true,
+        }));
+    } catch (error) {
+      console.warn("[Resources] Unable to load saved links", error);
+      return [];
+    }
+  }
+
+  function saveCustomResources(resources) {
+    try {
+      localStorage.setItem(CUSTOM_RESOURCE_STORAGE_KEY, JSON.stringify(resources));
+    } catch (error) {
+      console.warn("[Resources] Unable to save links", error);
+    }
+  }
+
+  let customResourceLinks = loadCustomResources();
+
+  function getAllResourceLinks() {
+    return [...RESOURCE_LINKS, ...customResourceLinks];
+  }
+
   function addResourceLink(resource, target = document.querySelector("[data-resources-list]")) {
     if (!target || !resource) return null;
     const { href, title, label, description, theme, ariaLabel } = resource;
@@ -9078,7 +9262,7 @@ body.all-tasks-overlay-active {
     return link;
   }
 
-  function renderResourceLinks(resources = RESOURCE_LINKS) {
+  function renderResourceLinks(resources = getAllResourceLinks()) {
     const list = document.querySelector("[data-resources-list]");
     if (!list) return;
     list.innerHTML = "";
@@ -9086,6 +9270,93 @@ body.all-tasks-overlay-active {
       addResourceLink(resource, list);
     });
   }
+
+  function addCustomResourceLink(resource) {
+    if (!resource) return null;
+    const href = sanitizeResourceText(resource.href);
+    const title = sanitizeResourceText(resource.title);
+    if (!href || !title) {
+      return null;
+    }
+
+    let url;
+    try {
+      url = new URL(href, window.location.origin);
+    } catch (error) {
+      return null;
+    }
+
+    if (url.protocol !== "http:" && url.protocol !== "https:") {
+      return null;
+    }
+
+    const entry = {
+      id: resource.id || `custom-${Date.now().toString(36)}-${Math.random().toString(36).slice(2, 8)}`,
+      href: url.toString(),
+      title,
+      theme: normalizeResourceTheme(resource.theme),
+      isCustom: true,
+    };
+
+    const label = sanitizeResourceText(resource.label);
+    const description = sanitizeResourceText(resource.description);
+    const ariaLabel = sanitizeResourceText(resource.ariaLabel);
+    if (label) entry.label = label;
+    if (description) entry.description = description;
+    if (ariaLabel) entry.ariaLabel = ariaLabel;
+
+    const existingIndex = customResourceLinks.findIndex(item => item.href === entry.href);
+    if (existingIndex >= 0) {
+      entry.id = customResourceLinks[existingIndex].id || entry.id;
+      customResourceLinks[existingIndex] = entry;
+    } else {
+      customResourceLinks.push(entry);
+    }
+
+    saveCustomResources(customResourceLinks);
+    renderResourceLinks();
+    return entry;
+  }
+
+  function initializeResourceCreation() {
+    const form = document.getElementById("addResourceForm");
+    if (!form) return;
+    const messageEl = form.querySelector("[data-resource-form-message]");
+    const setMessage = (text, status = "neutral") => {
+      if (!messageEl) return;
+      messageEl.textContent = text || "";
+      messageEl.dataset.status = status;
+    };
+
+    form.addEventListener("submit", event => {
+      event.preventDefault();
+      const data = new FormData(form);
+      const result = addCustomResourceLink({
+        href: data.get("resourceUrl"),
+        title: data.get("resourceTitle"),
+        label: data.get("resourceLabel"),
+        description: data.get("resourceDescription"),
+        theme: data.get("resourceTheme"),
+      });
+
+      if (result) {
+        form.reset();
+        setMessage("Link added to Resources.", "success");
+      } else {
+        setMessage("Please provide a title and a valid https:// link.", "error");
+      }
+    });
+
+    form.addEventListener("input", () => {
+      setMessage("", "neutral");
+    });
+  }
+
+  if (typeof window !== "undefined") {
+    window.addCustomResourceLink = addCustomResourceLink;
+  }
+
+  let routineState = {};
   let routineHapticsEnabled = true;
   const routineTiles = new Map();
   let openRoutineId = null;
@@ -19677,6 +19948,7 @@ initializeFocusFabLongPress();
 // === END: Accordions ===
 
     renderResourceLinks();
+    initializeResourceCreation();
     initializeResourcesDrawer();
     initializeSosPanel();
     initializeCommandBarAutohide();
